style/style.css
html,body{
	height:100%;
	margin:0;
	padding:0;
	background-color: gray;
	font-family: Comfortaa;
}

.quote-container{
  width:750px;
  margin:auto;
  margin-top:10px;
  display:flex;
  flex-direction:column;
}

.quote-style{
  text-align:center;
  font-size:20px;
  color:#fff;
  font-family:Josefin Sans;
  align-self:center;
}

.quote{padding:15px;}

.author{
  font-size:15px;
  font-style:italic;
}

#clock {
  font-family: "Josefin Sans", sans-serif;
  font-size: 990%;
  position: absolute;
  left: 50%;
  top: 25%;
  color:white;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-shadow: 0 0 15px #000;
}

#phrase {
  font-family: "Josefin Sans", sans-serif;
  font-size: 300%;
  position: absolute;
  left: 50%;
  top: 60%;
  color:white;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-shadow: 0 0 15px #000;
}

#setting {
  background:none;
  position:absolute;
  bottom: 0;
  left:0;
  padding:5px 15px 0px 15px;
  border:0;
  cursor:pointer;
  outline:none;
  z-index:1;
  opacity: 1;
  color:white;
  height:10%;
}

#setting:hover {
  border-bottom: 2px solid white;
}

#menu {
  background-color: rgba(0,0,0,0.9);
  width:30%;
  height:50vh;
  position:absolute;
  bottom:10vh;
  color:white;
  -moz-border-radius: 2%;
  border-radius: 2%;
}


#menu ul li {
  font-family:"Josefin Sans", "arial";
  font-size: 100%;
  list-style-type: none;
}

#menu ul p {
    display:inline-block;
}

#menutitle {
  display: block;
  text-align: center;
  font-family: "Josefin Sans", "arial";
  font-weight: bold;
  font-size: 180%;
  border-bottom: 1px solid rgba(255, 255, 255, .5);
    -webkit-background-clip: padding-box; /* for Safari */
    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
  padding:0px;
  margin-bottom: 0;
}

#current-weather-wrapper{
	color:white;
	opacity: 0.5;
	float: right;
	font-size: 15px;
	border-top: 3px solid #555;
	margin-right: 5px;
}

#current-weather-wrapper:hover{
	color:white;
	cursor:pointer;
	border-top: 3px solid white;
	opacity: 1;
}

img{
	width:50px;
	height:50px;
}


#wm-icon,#wm-temp,#wm-top-row{
		display: inline;
}

#wm-location{
	position: relative;
	bottom:8px;
	padding-left: 8px;
}

#wm-temp{
	font-size: 20px;
	position: relative;
	bottom:15px;
	right:10px;
}

#forecast-wrapper{
	right:-550px;
	padding-bottom: 20px;
	color:white;
	font-size: 12px;
	position:fixed;
	width:450px;
	background-color: rgba(0, 0, 0, 0.6);
	top: 100px;
	border-radius: 5px;
}

#wm-forecast-title{
	padding: 10px;
	text-align: left;
	margin-left:12px;
	font-size: 25px;

}

#forecast-data{
	display:table;
	width:90%;
	border-top: 2px solid white;
	margin:auto;
}

.cell{
	display: table-cell;
	width:110px;
	text-align: center;
	font-size: 13px;
}

.table-row img{
	position: relative;
	width:40px;
	height:30px;
	top:10px;
}

.table-row{
	width:100%;
}

.days{
	display:table-cell;
	font-size: 12px;

}

.weather-slide-in{
	animation-name: weather-slide-in;
	animation-delay: 0.1s;
	animation-duration: 0.5s;
	animation-fill-mode: both;
}

@keyframes weather-slide-in{
	from{right:-550px;}
	to{right:0%;}
}

.weather-slide-out{
	animation-name: weather-slide-out;
	animation-delay: 0.1s;
	animation-duration: 0.5s;
	animation-fill-mode: both;
}

@keyframes weather-slide-out{
	from{right:0%;}
	to{right:-550px;}
}

